# mechkeys

./: .gitignore  DISTRIBUTING.md  LICENSE  README.md  download_sounds.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: release-macos.yml
docs/: DISTRIBUTING.md
mechkeys/: __main__.py  app.py  download_sounds.py  paths.py
packaging/macos/: com.mechkeys.app.plist
scripts/: build_macos_release.sh
